mutateIn becomes the center of the universe

--- a/bench/index.html
+++ b/bench/index.html
@@ -191,7 +191,7 @@
       const colors = {
         'bedit – setIn': '#2563eb',
         'bedit - mutateIn': '#1d4ed8',
-        'bedit - batchEdits': '#1e40af',
+        'bedit - mutate': '#1e40af',
         immer: '#dc2626',
         mutative: '#059669',
       }
